; ModuleID = '/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_print_flag_json.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_print_flag_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32, i32, i32 }
%struct.print_flag_t = type { i64, i64, i32, i64 }

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"realname\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"size\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"alias\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"offset\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"comment\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @print_flag_json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @print_flag_json(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.print_flag_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.print_flag_t*
  store %struct.print_flag_t* %8, %struct.print_flag_t** %6, align 8
  %9 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %10 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %30

13:                                               ; preds = %2
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %18 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %16, %19
  br i1 %20, label %29, label %21

21:                                               ; preds = %13
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %26 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp sge i64 %24, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %21, %13
  store i32 1, i32* %3, align 4
  br label %103

30:                                               ; preds = %21, %2
  %31 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %32 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @pj_o(i32 %33)
  %35 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %36 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 5
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @pj_ks(i32 %37, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %40)
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 5
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 4
  %47 = load i32, i32* %46, align 4
  %48 = icmp ne i32 %44, %47
  br i1 %48, label %49, label %57

49:                                               ; preds = %30
  %50 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %51 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %50, i32 0, i32 2
  %52 = load i32, i32* %51, align 8
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 4
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @pj_ks(i32 %52, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %55)
  br label %57

57:                                               ; preds = %49, %30
  %58 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %59 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %58, i32 0, i32 2
  %60 = load i32, i32* %59, align 8
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 3
  %63 = load i32, i32* %62, align 8
  %64 = call i32 @pj_ki(i32 %60, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %63)
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %66 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i32 0, i32 2
  %67 = load i32, i32* %66, align 4
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %77

69:                                               ; preds = %57
  %70 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %71 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %70, i32 0, i32 2
  %72 = load i32, i32* %71, align 8
  %73 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %74 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %73, i32 0, i32 2
  %75 = load i32, i32* %74, align 4
  %76 = call i32 @pj_ks(i32 %72, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i32 %75)
  br label %85

77:                                               ; preds = %57
  %78 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %79 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %78, i32 0, i32 2
  %80 = load i32, i32* %79, align 8
  %81 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %82 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %81, i32 0, i32 0
  %83 = load i64, i64* %82, align 8
  %84 = call i32 @pj_kn(i32 %80, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i64 %83)
  br label %85

85:                                               ; preds = %77, %69
  %86 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %87 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %86, i32 0, i32 1
  %88 = load i32, i32* %87, align 8
  %89 = icmp ne i32 %88, 0
  br i1 %89, label %90, label %98

90:                                               ; preds = %85
  %91 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %92 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %91, i32 0, i32 2
  %93 = load i32, i32* %92, align 8
  %94 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %95 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %94, i32 0, i32 1
  %96 = load i32, i32* %95, align 8
  %97 = call i32 @pj_ks(i32 %93, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32 %96)
  br label %98

98:                                               ; preds = %90, %85
  %99 = load %struct.print_flag_t*, %struct.print_flag_t** %6, align 8
  %100 = getelementptr inbounds %struct.print_flag_t, %struct.print_flag_t* %99, i32 0, i32 2
  %101 = load i32, i32* %100, align 8
  %102 = call i32 @pj_end(i32 %101)
  store i32 1, i32* %3, align 4
  br label %103

103:                                              ; preds = %98, %29
  %104 = load i32, i32* %3, align 4
  ret i32 %104
}

declare dso_local i32 @pj_o(i32) #1

declare dso_local i32 @pj_ks(i32, i8*, i32) #1

declare dso_local i32 @pj_ki(i32, i8*, i32) #1

declare dso_local i32 @pj_kn(i32, i8*, i64) #1

declare dso_local i32 @pj_end(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
